erDiagram
    User ||--o{ ScrapeJob : "創建"
    ScrapeJob ||--o{ Article : "包含"
    ScrapeJob ||--o{ KeywordAnalysis : "產生"
    ScrapeJob ||--o{ NamedEntityAnalysis : "產生"
    ScrapeJob ||--o{ CategorySentimentSummary : "總結"
    Article ||--o| SentimentAnalysis : "分析"
    ScrapeJob ||--o{ SentimentAnalysis : "關聯"
    
    User {
        int id PK
        string username
        string password
        string email
    }
    
    ScrapeJob {
        int id PK
        int user_id FK
        datetime created_at
        datetime updated_at
        string status
        string categories
        int limit_per_category
        boolean use_threading
        int max_workers
        string result_file_path
        boolean sentiment_analyzed
    }
    
    Article {
        int id PK
        int job_id FK
        string item_id
        string category
        string title
        text content
        datetime date
        string author
        url link
        text photo_links
    }
    
    KeywordAnalysis {
        int id PK
        int job_id FK
        string word
        string pos
        int frequency
        string category
        datetime created_at
    }
    
    NamedEntityAnalysis {
        int id PK
        int job_id FK
        string entity
        string entity_type
        int frequency
        string category
        datetime created_at
    }
    
    SentimentAnalysis {
        int id PK
        int article_id FK "OneToOne"
        int job_id FK
        float positive_score
        float negative_score
        string sentiment
        string title_sentiment
        float title_positive_score
        float title_negative_score
        datetime created_at
        datetime updated_at
    }
    
    CategorySentimentSummary {
        int id PK
        int job_id FK
        string category
        int positive_count
        int negative_count
        int neutral_count
        float average_positive_score
        datetime created_at
        datetime updated_at
    }
